src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__agent_graph_keybinding_hint__agent_graph_mode_hints_include_esc_back_and_g_panels.snap
---
source: src/tui/snapshot_tests/agent_graph_keybinding_hint.rs
expression: spans
---
[
    Span::from("[Esc]").green(),
    Span::from(" Back").dark_gray(),
    Span::from("  "),
    Span::from("[g]").green(),
    Span::from(" Panels").dark_gray(),
]
